--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* Page element*/
 
+:root {
+    --hover-color: #b15fcc;
+}
+
+
 .page{
     width: 100%
 
@@ -63,6 +68,7 @@
 
 }
 
+
 .menu-wrap{
     align-self: flex-start;
     display: flex;
@@ -70,6 +76,7 @@
     font-size: 16px;
     margin-top: 40px;
     text-transform: uppercase;
+    margin-right: 100px;
 }
 
 .menu_logo{
@@ -105,7 +112,7 @@
 }
 
 .menu-item{
-    margin-right: 30px;
+    margin-right: 50px;
 }
 .menu-item:hover{
     cursor: pointer;
@@ -146,7 +153,7 @@
 }
 
 .menu__link:before {
-    background-color: #b15fcc;
+    background-color: var(--hover-color);
     bottom: -6px;
     content: "";
     display: block;
@@ -200,7 +207,71 @@
 
 
 
+
 /* secondary menu (appearing from hamburger) */
+.menu-layer__top .menu__logo[data-v-b99592d4] {
+    left: 0;
+    position: absolute;
+    top: 5px
+}
+
+.menu-layer__top.menu__wrap[data-v-b99592d4] {
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0
+}
+
+.menu-layer__body[data-v-b99592d4] {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding-top: 115px;
+    position: relative
+}
+
+.menu-layer__body:after,.menu-layer__body:before {
+    background: hsla(0,0%,100%,.15);
+    content: "";
+    position: absolute
+}
+
+.menu-layer__body:before {
+    bottom: -1px;
+    height: 1px;
+    left: -30px;
+    width: calc(100% + 60px)
+}
+
+.menu-layer__body:after {
+    height: 100%;
+    left: 50%;
+    top: 0;
+    width: 1px
+}
+
+.menu-layer__close {
+    border: none;
+    cursor: pointer;
+    height: 28px;
+    padding: 0;
+    width: 28px
+}
+
+.menu-layer__close svg {
+    height: 100%;
+    width: 100%
+}
+
+.menu-layer__close svg g {
+    stroke: #fff
+}
+
+
+.opened{
+    background-color: #fff
+}
+
 .opened .menu-layer__cover{
     opacity: 1;
     pointer-events: all;
@@ -233,20 +304,20 @@
     transform: translateY(-100%);
     transition: transform .5s ease;
     width: 100%;
-    z-index: 1000;
+    z-index: 100;
 }
 
-.menu-layer.container {
-    background: #272727;
+.menu-layer .container {
+    background: transparent;
     padding: 0 30px;
 }
-
+    
 
 .menu-layer__top{
     align-items: center;
-    justify-content: flex-end;
-    padding: 30px;
-    position: relative;
+                justify-content: flex-end;
+                padding: 30px;
+                position: relative
 }
 
 .menu-layer__top:before{
@@ -279,6 +350,12 @@
 .menu-layer {
     height: 450px;
 }
+.menu-layer__body:after,.menu-layer__body:before {
+    content: none
+}
+
+
+
 }
 
 
@@ -296,16 +373,121 @@ a{
 .hero{
     top: 0;
     height: 55em;
-    background-color: rgb(199, 125, 125);
-    background-position: -9999px -9999px;
+    background-image: url("./assets/test.png");
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
+    opacity: 1;
+    text-align: left;
+
+}
+
+.text-row{
+    translate: none; 
+    rotate: none; scale: none; transform: translate(0px, -101%) rotate(0.001deg);
+    z-index: 100;
+    text-align: left;
+
+    
+}
+
+.-decor {
+    color: #ffc803;
+    display: block;
+    font-family: "Gilam SemiBold",sans-serif;
+    font-size: 16px;
+    letter-spacing: 4.5px;
+    /*margin-bottom: 15px;*/
+    text-transform: uppercase;
+    z-index: 11;
+
+}
+
+.slide{
+    background-color: transparent;
+    height: 100%;
+    left: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.hero-content{
+        bottom: 250px;
+        left: 40px;
+        pointer-events: none;
+        position: absolute;
+        width: calc(100% - 80px);
+        z-index: 1;
+        opacity: 1;
+        pointer-events: auto;
+    
+}
+
+.animation-row{
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+h1{
+    margin-top: 0;
 }
 
 
 
+.hero-sub-header{
+    font-size: 0.5em;
+    margin-top: 0;
+    margin-bottom: 0;
+    color:#cc84e4
+
+}
+
+a {
+    font-family: "Gilam SemiBold",sans-serif;  
+}
+
+.hero-content .animation-row .-line, .hero-content .animation-row-title {
+    margin-left: -35px;
+    padding-left: 35px;
+}
+
+.hero-content .animation-row .-line:before {
+    left: 0;
+}
 
 
+.hero-content h1{
+    color: #fff;
+    opacity: 1;
+}
+
+.-line:before{
+    background-color: #ffe177;
+    content: "";
+    height: 100%;
+    left: -35px;
+    position: absolute;
+    top: 0;
+    width: 2px;
+}
+
+
+
+@media screen and (min-width: 970px) {
+.hero-content {
+    bottom: auto;
+    margin-left: 10.5rem;
+    padding-bottom: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 52rem;
+    
+}
+}
 
 
 
@@ -325,11 +507,12 @@ a{
     }
 
 .menu-item {
-    margin-right: 15px;
+    margin-right: 3srem;
 }
 
 .menu-right {
-    margin-left: 8rem;
+    /*margin-left: 8rem;*/
+    margin-left: 15em;
 }
 
 }
@@ -339,3 +522,178 @@ a{
     margin-left: 11rem;
 }
 }
+
+@media screen and (min-width: 970px) {}
+.hero-content h1 {
+    margin-bottom: 20px;
+}
+
+@media screen and (min-width: 970px) {
+.hero-content .animation-row .-line, .hero-content .animation-row-title {
+    margin-left: -3.5rem;
+    padding-left: 3.5rem;
+}
+}
+
+.hero-content .animation-row .-line:before {
+    left: 0;
+}
+
+.hero-description{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.btn{
+    align-items: center;
+    color: #000;
+    display: inline-flex;
+    font-family: "Gilam SemiBold";
+    font-size: 15px;
+    height: 34px;
+    margin-top: 30px;
+    padding-left: 40px;
+    position: relative;
+    text-transform: uppercase;
+    z-index: 1;
+}
+
+.btn.--large:hover .btn-stroke {
+    width:20px
+}
+
+.btn.--large:hover:after {
+    width: 100%;
+}
+
+.btn::after {
+    background-color: rgba(39,39,39,.15);
+    bottom: 0;
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    transition: width .3s ease,background-color .3s ease;
+    width: 55px;
+    z-index: -1;
+}
+
+.animation-row span{
+    translate: none; rotate: none; scale: none; transform: translate(0px, 0%) rotate(0.001deg);
+    display: block;
+    position: relative;
+}
+
+
+.btn.--large{
+    align-items: center;
+    background-color: #ffffff;
+    display: inline-flex;
+    height: 50px;
+    padding-left: 0;
+    position: relative;
+}
+
+
+
+.btn.--large .btn-stroke {
+    background-color: #ffffff;
+    height: 1px;
+    left: 20px;
+    position: absolute;
+    transition: width .3s ease;
+    width: 0;
+}
+
+.btn.--large .btn-label {
+    display: inline-block;
+    margin-right: 65px;
+    padding-left: 30px;
+    transition: transform .3s ease;
+    white-space: nowrap;
+    color: black;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.btn.--large::after {
+    background-color: var(--hover-color);
+    opacity: 1;
+    transition: width .3s ease;
+    width: 9px;
+}
+
+.btn.--large:hover .btn-label {
+    transform:translateX(2rem);
+}
+
+@media screen and (min-width: 1452px){
+.btn.--large {
+    height: 50px;
+}
+}
+
+
+@media screen and (min-width: 970px) {
+.hero-content .btn {
+    margin-top: 20px;
+}
+
+.btn.--large .btn-stroke {
+    left: 2rem;
+}
+
+.btn.--large .btn-label {
+    margin-right: 6.5rem;
+    padding-left: 3rem;
+}
+
+
+
+}
+
+.social{
+    display: none;
+}
+
+.social__label {
+    color: hsla(0,0%,100%,.45);
+    display: inline-block;
+    font-family: "Gilam SemiBold",sans-serif;
+    font-size: 11px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    transform: rotate(-90deg) translateX(-150px);
+    transform-origin: 0 0;
+    transition: transform .3s ease;
+}
+
+/* Social menu*/
+@media screen and (min-width: 970px) {
+.social {
+    bottom: 10rem;
+    display: inline-block;
+    left: 0;
+    position: absolute;
+    z-index: 10;
+}
+}
+
+
+.hero .container{
+    background: transparent;
+    height: 100%;
+    position: relative;
+}
+
+@media screen and (min-width: 1452px) {
+.container {
+    width: 1452px;
+}
+
+
+.social__label {
+    font-size: 11px;
+}
+}
+
+
