--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 #root {
   max-width: 100vw;
   margin: 0 auto;
-  text-align: center;
   width: 100%;
 }
 
-:root {
+
+#root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #dbd5d5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,15 +21,16 @@
   -webkit-text-size-adjust: 100%;
 }
 
+/**
 .page{
-  width: 100%; /* Make sure it spans the full width of its parent */
+  width: 100%; /* Make sure it spans the full width of its parent 
   
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  /*min-width: 320px;
   min-height: 100vh;
-}
+} **/
 
 
 div{
